# DinoBoard-v2

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README_CN.md  REFACTOR_PLAN.md  requirements.txt  setup.py
bindings/: py_engine.cpp
docs/: AI_API.md  GAME_DEVELOPMENT_GUIDE.md  GAME_FEATURES_OVERVIEW.md  KNOWN_ISSUES.md  MCTS_ALGORITHM.md  NEW_GAME_TEST_GUIDE.md  REFACTOR_PLAN.md  VIBE_CODING_ONBOARDING.md  WEB_DESIGN_PRINCIPLES.md
docs/devlog/: 2026-04-30.md  2026-05-01.md  (+2 more)
engine/: CMakeLists.txt
engine/core/: action_constraint.cpp  action_constraint.h  belief_tracker.h  feature_encoder.h  game_interfaces.h  game_registry.h  types.h
engine/infer/: onnx_policy_value_evaluator.cpp  onnx_policy_value_evaluator.h
engine/runtime/: arena_runner.cpp  arena_runner.h  heuristic_runner.cpp  heuristic_runner.h  nopeek_support.cpp  nopeek_support.h  selfplay_runner.cpp  selfplay_runner.h
engine/search/: net_mcts.cpp  net_mcts.h  root_noise.h  tail_solver.cpp  tail_solver.h  temperature_schedule.h
platform/: app.py
scripts/: fix_splendor_2p_feature_order.py
tests/: conftest.py  test_action_history.py  test_ai_api_separation.py  test_api_belief_matches_selfplay.py  test_api_mcts_policy_invariance.py  test_arena.py  test_config_passthrough.py  test_coup_heuristic_sampling.py  test_dag_reuse.py  test_deployed_models_match_encoder.py  test_do_undo_consistency.py  test_encode_state.py  test_encoder_respects_hash_scope.py  test_feature_encoding.py  test_game_session.py  test_game_specific.py  test_game_state_consistency.py  test_hasher_avalanche.py  test_heuristic_and_eval.py  test_heuristic_strength.py  test_hidden_info.py  test_hidden_info_coup_loveletter.py  test_is_mcts_correctness.py  test_loveletter_terminal_invariants.py  test_mcts_core.py  test_multiplayer.py  test_onnx_roundtrip.py  test_pipeline_integration.py  test_registry_smoke.py  test_replay_module.py  test_sample_collection.py  test_score_head.py  test_selfplay_sample_integrity.py  test_tail_solver.py  test_tracker_observation_only.py  test_training_pipeline.py  test_web_config.py
training/: cli.py  model.py  pipeline.py
(+120 files in other folders)
